--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   stacked: ^3.4.0
   stacked_services: ^1.1.0
+  stacked_hooks: ^0.2.4
   velocity_x: ^3.3.0
   logger: ^2.5.0
   sqflite: ^2.4.1
