--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   json_annotation: ^4.9.0
   intl: ^0.17.0
   ndialog: ^4.4.0
+  shared_preferences: ^2.3.4
+  provider: ^6.1.2
 
 dev_dependencies:
   build_runner: ^2.4.14
