--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   ndialog: ^4.4.0
   shared_preferences: ^2.3.4
   provider: ^6.1.2
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   build_runner: ^2.4.14
