🔥 change the app name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: stacked_app
-description: A new Flutter project.
+name: quotable
+description: A quotable app.
 publish_to: 'none'
 version: 0.1.0
 
