--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^6.1.2
   adaptive_theme: ^3.6.0
   skeletonizer: ^1.4.2
+  flex_color_scheme: ^8.0.2
 
 dev_dependencies:
   build_runner: ^2.4.14
