--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,27 +12,27 @@ dependencies:
   stacked: ^3.4.0
   stacked_services: ^1.1.0
   stacked_hooks: ^0.2.4
-  velocity_x: ^3.3.0
   logger: ^2.5.0
   sqflite: ^2.4.1
   path: ^1.9.0
   slugify: ^2.0.0
   http: ^1.2.2
   json_annotation: ^4.9.0
-  intl: ^0.17.0
+  intl: ^0.20.1
   ndialog: ^4.4.0
   shared_preferences: ^2.3.4
   provider: ^6.1.2
   adaptive_theme: ^3.6.0
   skeletonizer: ^1.4.2
+  flex_color_scheme: ^8.0.2
 
 dev_dependencies:
   build_runner: ^2.4.14
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.1
-  stacked_generator: ^1.3.3
+  stacked_generator: ^2.0.0-pre.1
   json_serializable: ^6.9.0
 
 flutter:
