⚡️properly blur the background when showing bottom sheet modal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
             "source.fixAll": "always",
             "source.organizeImports": "always",
         }
-    }
+    },
+    "files.eol": "\n",
 }
